--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,28 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+
+    <!-- Primary Meta Tags -->
+    <title>Markdown Editor</title>
+    <meta name="title" content="Markdown Editor">
+    <meta name="description" content="マークダウンエディタのサンプル">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://metatags.io/">
+    <meta property="og:title" content="Markdown Editor">
+    <meta property="og:description" content="マークダウンエディタのサンプル">
+    <meta property="og:image" content="https://usuba-markdown-editor.firebaseapp.com/usuba.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://metatags.io/">
+    <meta property="twitter:title" content="Markdown Editor">
+    <meta property="twitter:description" content="マークダウンエディタのサンプル">
+    <meta property="twitter:image" content="https://usuba-markdown-editor.firebaseapp.com/usuba.jpg">
+
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>markdown-editor</title>
+    <title>Markdown Editor</title>
   </head>
   <body>
     <noscript>
